Use correct EncoderPrefs, so the extension is displayed correctly when changing the encoder

BUG: 130993

svn path=/trunk/extragear/multimedia/kaudiocreator/; revision=700376